--- a/Academy2025/appsettings.Development.json
+++ b/Academy2025/appsettings.Development.json
@@ -4,5 +4,12 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "ApplicationDbContext": "Data Source=C:\\Users\\HP\\AppData\\Local\\academy.db"
+  },
+  "JwtOptions": {
+    "Key": "attrecto_aa_secret_key_that_is_long_enough",
+    "Issuer": "attrecto_aa"
   }
 }
