--- a/Academy2025/appsettings.Development.json
+++ b/Academy2025/appsettings.Development.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "ApplicationDbContext": "Data Source=C:\\Users\\HP\\AppData\\Local\\academy.db"
+    "ApplicationDbContext": "Data Source=academy.db"
   },
   "JwtOptions": {
     "Key": "attrecto_aa_secret_key_that_is_long_enough",
